2009-07-26  Andrew John Hughes  <ahughes@redhat.com>

	* javac.in:
	Turn off more ecj warnings to reduce clutter.

2009-07-26  Andrew John Hughes  <ahughes@redhat.com>

	* patches/hotspot/default/icedtea-core-build.patch,
	* patches/hotspot/default/icedtea-static-libstdc++.patch,
	* patches/hotspot/default/icedtea-zero-build.patch,
	* patches/icedtea-arch.patch,
	* patches/icedtea-linker-options.patch,
	* patches/icedtea-signature-iterator.patch,
	* patches/icedtea-zero.patch,
	* platform_zero.in,
	* ports/hotspot/make/linux/makefiles/zero.make,
	* ports/hotspot/src/cpu/zero/vm/assembler_zero.cpp,
	* ports/hotspot/src/cpu/zero/vm/assembler_zero.hpp,
	* ports/hotspot/src/cpu/zero/vm/bytecodeInterpreter_zero.cpp,
	* ports/hotspot/src/cpu/zero/vm/bytecodeInterpreter_zero.hpp,
	* ports/hotspot/src/cpu/zero/vm/bytecodeInterpreter_zero.inline.hpp,
	* ports/hotspot/src/cpu/zero/vm/bytecodes_zero.cpp,
	* ports/hotspot/src/cpu/zero/vm/bytes_zero.hpp,
	* ports/hotspot/src/cpu/zero/vm/codeBuffer_zero.hpp,
	* ports/hotspot/src/cpu/zero/vm/copy_zero.hpp,
	* ports/hotspot/src/cpu/zero/vm/cppInterpreterGenerator_zero.hpp,
	* ports/hotspot/src/cpu/zero/vm/cppInterpreter_zero.cpp,
	* ports/hotspot/src/cpu/zero/vm/cppInterpreter_zero.hpp,
	* ports/hotspot/src/cpu/zero/vm/debug_zero.cpp,
	* ports/hotspot/src/cpu/zero/vm/deoptimizerFrame_zero.hpp,
	* ports/hotspot/src/cpu/zero/vm/disassembler_zero.hpp,
	* ports/hotspot/src/cpu/zero/vm/dump_zero.cpp,
	* ports/hotspot/src/cpu/zero/vm/entryFrame_zero.hpp,
	* ports/hotspot/src/cpu/zero/vm/entry_zero.hpp,
	* ports/hotspot/src/cpu/zero/vm/frame_zero.cpp,
	* ports/hotspot/src/cpu/zero/vm/frame_zero.hpp,
	* ports/hotspot/src/cpu/zero/vm/frame_zero.inline.hpp,
	* ports/hotspot/src/cpu/zero/vm/globals_zero.hpp,
	* ports/hotspot/src/cpu/zero/vm/icBuffer_zero.cpp,
	* ports/hotspot/src/cpu/zero/vm/icache_zero.cpp,
	* ports/hotspot/src/cpu/zero/vm/icache_zero.hpp,
	* ports/hotspot/src/cpu/zero/vm/interp_masm_zero.hpp,