@@ -1,20 +1,20 @@
-OPENJDK_VERSION = b65
+OPENJDK_VERSION = b66
 
-OPENJDK_CHANGESET = 3f9b913a63a5
-CORBA_CHANGESET = 5bd83d1b2476
-JAXP_CHANGESET = 008c662e0ee9
-JAXWS_CHANGESET = 706c94322f68
-JDK_CHANGESET = 76242e1e7faf
-LANGTOOLS_CHANGESET = 7e0056ded28c
-HOTSPOT_CHANGESET = fa683fcb2628
+OPENJDK_CHANGESET = e7eeeda332ec
+CORBA_CHANGESET = 1741ea5cb854
+JAXP_CHANGESET = 22f9d5d5b5fe
+JAXWS_CHANGESET = 43c35a1df5cb
+JDK_CHANGESET = 69ba5ca06a43
+LANGTOOLS_CHANGESET = 634f519d6f9a
+HOTSPOT_CHANGESET = 945fcffdbcab
 
-OPENJDK_MD5SUM = 1b83ab007193ac11ace81777a9cf8b34
-CORBA_MD5SUM = c751d1140d3a5f777655b9b7cde41c9f
-JAXP_MD5SUM = 5832f64d5469985060f0c16fbcbce574
-JAXWS_MD5SUM = c23b0c5e2140feb224cc04d0f8bc2768
-JDK_MD5SUM = 013f095e5d95f8fe9afb07353670fbc7
-LANGTOOLS_MD5SUM = eca84cbe43c9f0314baa46917463b2cf
-HOTSPOT_MD5SUM = db12c9a6a0a61a1d783cd132aef59ba6
+OPENJDK_MD5SUM = 8f63dbb0dcd83d905e243c58d0135174
+CORBA_MD5SUM = 06ac898f583fc9eec179fc2d1dcb5c71
+JAXP_MD5SUM = 366dde7f9a1fa6436f48a64a8704dc20
+JAXWS_MD5SUM = 4fb20d6ee197e63dac567ad340532293
+JDK_MD5SUM = 8c54f71ff1f519440716c9d50e02468f
+LANGTOOLS_MD5SUM = cd1389112baa1b2b24da95555345c1b9
+HOTSPOT_MD5SUM = ce3ab877df030cf4842001918898244e
 
 CACAO_VERSION = 0.99.4
 CACAO_MD5SUM = 63220327925ace13756ae334c55a3baa
