@@ -1,5 +1,10 @@
 2009-07-26  Andrew John Hughes  <ahughes@redhat.com>
 
+	* Makefile.am:
+	Bump to b66.
+
+2009-07-26  Andrew John Hughes  <ahughes@redhat.com>
+
 	* javac.in:
 	Turn off more ecj warnings to reduce clutter.
 
